--- a/hr-worker/src/main/resources/application.properties
+++ b/hr-worker/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+spring.application.name=hr-worker
+server.port=8080
 
+# Database configuration
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.username=lambras
+spring.datasource.password=lambras
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
