--- a/hr-worker/src/main/resources/application.properties
+++ b/hr-worker/src/main/resources/application.properties
@@ -3,6 +3,7 @@ server.port=${PORT:0}
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+spring.config.import = optional:configserver:http://localhost:8888
 
 # Database configuration
 spring.datasource.url=jdbc:h2:mem:testdb
