Config server updated.
Configured to access a private Github repository.

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.cloud.gateway.routes[0].predicates[0]=Path=/workers/**
 spring.cloud.gateway.routes[1].id=hr-payroll
 spring.cloud.gateway.routes[1].uri=lb://hr-payroll
 spring.cloud.gateway.routes[1].predicates[0]=Path=/payments/**
+spring.cloud.gateway.routes[1].predicates[1]=Path=/actuator/**
+
