--- a/hr-worker/src/main/resources/application.properties
+++ b/hr-worker/src/main/resources/application.properties
@@ -4,6 +4,13 @@ eureka.instance.instance-id=${spring.application.name}:${spring.application.inst
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 spring.config.import = optional:configserver:http://localhost:8888
+management.endpoint.env.post.enabled=true
+management.endpoint.restart.enabled=true
+endpoints.sensitive=true
+endpoints.actuator.enabled=true
+management.endpoints.web.exposure.include=*
+
+spring.profiles.active=test
 
 # Database configuration
 spring.datasource.url=jdbc:h2:mem:testdb
