--- a/hr-config-server/src/main/resources/application.properties
+++ b/hr-config-server/src/main/resources/application.properties
@@ -3,4 +3,6 @@ spring.cloud.config.server.git.default-label=main
 server.port=8888
 
 spring.cloud.config.server.git.uri=https://github.com/joao-cigana/ms-config
+spring.cloud.config.server.git.username=${GITHUB_USERNAME}
+spring.cloud.config.server.git.password=${GITHUB_PASSWORD}
 
