hr-user microservice updated.
User and Role endpoints created.

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -12,3 +12,7 @@ spring.cloud.gateway.routes[1].uri=lb://hr-payroll
 spring.cloud.gateway.routes[1].predicates[0]=Path=/payments/**
 spring.cloud.gateway.routes[1].predicates[1]=Path=/actuator/**
 
+spring.cloud.gateway.routes[2].id=hr-user
+spring.cloud.gateway.routes[2].uri=lb://hr-user
+spring.cloud.gateway.routes[2].predicates[0]=Path=/users/**
+
