hr-oauth Open Feign Client created.
Comunication between hr-oaut and hr-user microservice, using Open Feign.

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,18 +1,9 @@
 spring.application.name=API-GATEWAY
 server.port=9765
+spring.cloud.gateway.discovery.locator.enabled=true
+spring.cloud.gateway.discovery.locator.lowerCaseServiceId=true
+
 eureka.instance.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 management.endpoints.web.exposure.include=*
-
-spring.cloud.gateway.routes[0].id=hr-worker
-spring.cloud.gateway.routes[0].uri=lb://hr-worker
-spring.cloud.gateway.routes[0].predicates[0]=Path=/workers/**
-
-spring.cloud.gateway.routes[1].id=hr-payroll
-spring.cloud.gateway.routes[1].uri=lb://hr-payroll
-spring.cloud.gateway.routes[1].predicates[0]=Path=/payments/**
-spring.cloud.gateway.routes[1].predicates[1]=Path=/actuator/**
-
-spring.cloud.gateway.routes[2].id=hr-user
-spring.cloud.gateway.routes[2].uri=lb://hr-user
-spring.cloud.gateway.routes[2].predicates[0]=Path=/users/**
 
